updated deployment file

--- a/kube-manifests/deploymentandservice.yaml
+++ b/kube-manifests/deploymentandservice.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: react-app
-          image: acrvarunregistry.azurecr.io/reactapp
+          image: acrvarunregistry.azurecr.io/varunreact
           ports:
             - containerPort: 3000
 
